--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -12,7 +12,7 @@ DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master
 RULE-SET,https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Shadowrocket/Proxy/Proxy.list,PROXY
 DOMAIN-SET,https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Shadowrocket/Proxy/Proxy_Domain.list,PROXY
 GEOIP,CN,DIRECT
-FINAL,Proxies
+FINAL,PROXY
 
 [Host]
 
